syntax = "proto3";
package dydxprotocol.vault;

import "dydxprotocol/prices/market_price.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/vault/types";

// VaultType represents different types of vaults.
enum VaultType {
  // Default value, invalid and unused.
  VAULT_TYPE_UNSPECIFIED = 0;

  // Vault is associated with a CLOB pair.
  VAULT_TYPE_CLOB = 1;
}

// VaultId uniquely identifies a vault by its type and number.
message VaultId {
  // Type of the vault.
  VaultType type = 1;

  // Unique ID of the vault within above type.
  uint32 number = 2;
}

// NumShares represents the number of shares in a vault.
message NumShares {
  // Number of shares.
  bytes num_shares = 2 [
    (gogoproto.customtype) =
        "github.com/dydxprotocol/v4-chain/protocol/dtypes.SerializableInt",
    (gogoproto.nullable) = false
  ];
}

// OwnerShare is a type for owner shares in a vault.
message OwnerShare {
  string owner = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  NumShares shares = 2;
}

// VaultParams is the individual parameters of a vault.
message VaultParams {
  // Lagged price that the vault quotes at.
  dydxprotocol.prices.MarketPrice lagged_price = 1;
}
